kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/003_associations_05.kmt
/* $Id: 003_associations_05.kmt,v 1.1 2005-11-23 09:35:27 dvojtise Exp $ */

// Test of a invalid associations

package root_package;


/* opposite mismatch  : the association is illformed */
class A {
    attribute b : B
}
class B {
	reference r1 : A#b
	operation truc()  is do 
	end
}

